# mosaico

./: .gitignore  404.html  README.md  index.html  llms-full.txt  sitemap.xml
.github/workflows/: ci.yml  docker.yml  docs.yml  tests.yml
SDK/: index.html
SDK/API_reference/comm/: index.html
SDK/API_reference/enum/: index.html
SDK/bridges/ml/: index.html
SDK/bridges/ros/: index.html
SDK/client/: index.html
SDK/handling/data-handling/: index.html
SDK/handling/reading/: index.html
SDK/handling/writing/: index.html
SDK/howto/interleaved_writing_from_multi_topics/: index.html
SDK/howto/ontology_customization/: index.html
SDK/howto/query_chained/: index.html
SDK/howto/query_data/: index.html
SDK/install/: index.html
SDK/ontology/: index.html
SDK/query/: index.html
daemon/: index.html
daemon/actions/: index.html
daemon/cli/: index.html
daemon/ingestion/: index.html
daemon/install/: index.html
daemon/query/: index.html
daemon/retrieval/: index.html
development/release_cycle/: index.html
doc/: README.md  mkdocs.yml  pyproject.toml
doc/docs/: index.md
doc/hooks/: make_llm_page.py
docker/dockerfiles/: Dockerfile.mosaicod
mosaico-sdk-py/: README.md  pyproject.toml
mosaico-sdk-py/doc-md/: handlers.md  ontology.md  queries.md  ros_bridge.md
mosaicod/: Cargo.toml  README.md  env.devel
mosaicod/.cargo/: config.toml
mosaicod/crates/mosaicod-query/: Cargo.toml
mosaicod/crates/mosaicod-query/src/: builder.rs  error.rs  filter.rs  lib.rs  timeseries.rs
mosaicod/crates/mosaicod-repo/: Cargo.toml
mosaicod/crates/mosaicod-repo/src/: core.rs  error.rs  lib.rs
mosaicod/crates/mosaicod-repo/src/facades/: facade_chunk.rs  facade_error.rs  facade_layer.rs  facade_query.rs  facade_sequence.rs  facade_topic.rs
mosaicod/crates/mosaicod-repo/src/sql_models/: data_catalog.rs  layers.rs  notifies.rs  sequence_record.rs  topic_record.rs
mosaicod/crates/mosaicod-repo/src/sql_models/pg_queries/: builders.rs  compilers.rs  data_catalog.rs  group.rs  layers.rs  notifies.rs  record.rs  sequence_record.rs  topic_record.rs
mosaicod/crates/mosaicod-server/: Cargo.toml
mosaicod/crates/mosaicod-server/src/: core.rs  errors.rs  flight.rs
mosaicod/crates/mosaicod-server/src/endpoints/: context.rs  do_action.rs  do_get.rs  do_put.rs  get_flight_info.rs  list_flights.rs
mosaicod/crates/mosaicod-server/src/endpoints/actions/: layer.rs  mod.rs  query.rs  sequence.rs  topic.rs
mosaicod/src/: arrow.rs  main.rs  params.rs  store.rs
scripts/: tests.sh
search/: search_index.json
(+268 files in other folders)
